syntax = "proto3";

package calculator;

option go_package = "github.com/Clement-Jean/grpc-go-course/calculator/proto";

message SumRequest {
  int32 first_no=1;
  int32 second_no=2;
}
message SumResponse {
  int32 result = 1;
}